--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 dj-database-url==0.5.0
 Django==2.1.2
+django-bootstrap-form==3.4
+django-bootstrap3==11.0.0
 django-crispy-forms==1.7.2
 django-environ==0.4.5
 django-phone-field==1.6.0
@@ -8,4 +10,3 @@ gunicorn==19.9.0
 psycopg2==2.7.6
 pytz==2018.5
 whitenoise==4.1
-django-bootstrap3
